umbrello/umlcanvasobject.cpp - removeAssociationEnd(): Call UMLDoc:removeAssociation() on the assoc.

umbrello/umldoc.cpp
- removeUMLObject(): Remove associations that this object may participate in.

BUG: 293042

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1283458